--- a/src/apps/location/templates/location/announcement_detail.html
+++ b/src/apps/location/templates/location/announcement_detail.html
@@ -11,13 +11,13 @@
 </body>
 <script>
     // Creates the map to be displayed
-    var map = L.map('map').setView([{{ origin.0 }}, {{ origin.1 }}], 14);
+    var map = L.map('map').setView([{{ circle_point.0 }}, {{ circle_point.1 }}], 18);
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
     // Creates the circle on the map
-    var circle = L.circleMarker([50.736199, -3.531705], {
+    var circle = L.circleMarker([{{ circle_point.0 }}, {{ circle_point.1 }}], {
         color: '#6dcae2',
         fillColor: '#aff2ea',
         fillOpacity: 0.5,
