--- a/src/apps/cards/templates/cards/display_card.html
+++ b/src/apps/cards/templates/cards/display_card.html
@@ -57,6 +57,7 @@
             </div>
         {% endif %}
     </div>
+    <script src="{% static 'js/card-animation.js' %}"></script>
     <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
