--- a/src/ecoGo/static/css/pack_opening/pack_opening.css
+++ b/src/ecoGo/static/css/pack_opening/pack_opening.css
@@ -137,3 +137,48 @@ ul:hover .card:hover {
     font-weight: bold;
     font-size: 10px;
 }
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(-5px);
+    }
+    50% {
+        transform: translateX(5px);
+    }
+    75% {
+        transform: translateX(-5px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes glow-rare {
+    0% {
+        box-shadow: 
+            inset 0 0 0 var(--card-border-thickness) var(--card-border-color),
+            0 0 10px rgba(255, 233, 0, 0.8); /* Red glow */
+    }
+    50% {
+        box-shadow: 
+            inset 0 0 0 var(--card-border-thickness) var(--card-border-color),
+            0 0 20px rgba(255, 233, 0, 1); /* Stronger red glow */
+    }
+    100% {
+        box-shadow: 
+            inset 0 0 0 var(--card-border-thickness) var(--card-border-color),
+            0 0 10px rgba(255, 233, 0, 0.8); /* Red glow */
+    }
+}
+
+.card.shake {
+    animation: shake 0.5s ease-in-out;
+}
+
+.card.glow {
+    animation: glow-rare 1.5s infinite;
+}
+
