--- a/src/apps/user/templates/user/register.html
+++ b/src/apps/user/templates/user/register.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static '/css/footer.css' %}">
     <link rel="stylesheet" href="{% static '/css/register_files/register_container.css' %}">
     <link rel="stylesheet" href="{% static '/css/privacy_policy.css' %}">
+    <link rel="stylesheet" href="{% static '/css/error_message.css' %}">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
 </head>
@@ -25,7 +26,19 @@
             </div>
             <form method="POST" action="{% url 'register' %}">
                 {% csrf_token %}
-                {{ registerform.as_div }}
+                {% for field in registerform %}
+                <div class="form-group">
+                    {{ field.label_tag }}
+                    {{ field }}
+                    {% if field.errors %}
+                        <ul style="list-style-type: none; padding-left: 0; margin-top: 10px;">
+                            {% for error in field.errors %}
+                                <li style="color: #dc3545; background-color: #f8d7da; border: 1px solid #f5c2c7; border-radius: 4px; padding: 8px 12px; padding-top: 12px; margin-bottom: 6px;">{{ error }}</li>
+                            {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
+            {% endfor %}
                 <div>
                     <label for="privacy"> I have read and agree to the Privacy Policy.</label>
                     <input type="checkbox" id="privacy" name="privacy" required>
