--- a/src/apps/user/templates/user/shop.html
+++ b/src/apps/user/templates/user/shop.html
@@ -100,5 +100,8 @@
         </div>
     <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+    <script src="{% static 'js/shop.js' %}"></script>
 </body>
 </html>
