--- a/src/apps/user/templates/user/leaderboard.html
+++ b/src/apps/user/templates/user/leaderboard.html
@@ -1,5 +1,22 @@
 {% extends 'base.html' %}
-
+<!DOCTYPE html>
+<html lang="en">
+    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static '/css/page.css' %}">
+    <link rel="stylesheet" href="{% static '/css/avatar.css' %}">
+    <link rel="stylesheet" href="{% static '/css/centered.css' %}">
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
+    <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
+    <title>Home</title>
+</head>
 {% block title %}Leaderboard - EcoGo{% endblock %}
 
 {% block content %}
@@ -34,3 +51,4 @@
     </table>
 </div>
 {% endblock %}
+</html>
