--- a/src/apps/user/templates/user/leaderboard.html
+++ b/src/apps/user/templates/user/leaderboard.html
@@ -27,20 +27,20 @@
             <tr>
                 <th>Rank</th>
                 <th>Username</th>
-                <th>Score</th>
+                <th>Level</th>
             </tr>
         </thead>
         <tbody>
-            {% for player in players %}
+            {% for player in top_10_users %}
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>
                     <div class="player-info">
-                        <img src="{% static 'images/default-avatar.png' %}" alt="Avatar" class="avatar">
+                        <img src="{% static 'photos/default.png' %}" alt="Avatar" class="avatar">
                         {{ player.username }}
                     </div>
                 </td>
-                <td>{{ player.score }}</td>
+                <td>{{ player.level }}</td>
             </tr>
             {% empty %}
             <tr>
